# Market-Insights

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cmake/: neural_network.__init__.py.in
data/neural_networks/test01/: info.json
modules/neural_network/include/neural_network/: global.hpp
modules/neural_network/include/neural_network/Core/NeuralNetwork/: ActivationFunction.hpp  ErrorFunction.hpp  INeuron.hpp  NeuralNetwork.hpp
modules/neural_network/include/neural_network/LSTM/: LSTM.hpp
modules/neural_network/include/neural_network/Math/: math.hpp
modules/neural_network/include/neural_network/Math/ActivationFunctions/: activationFunctions.hpp
modules/neural_network/include/neural_network/Math/ErrorFunctions/: errorFunctions.hpp
modules/neural_network/src/: INeuron.cpp  LSTM.cpp  NeuralNetwork.cpp  main.cpp
scripts/build_modules/: main.py
src/market_insights/: __init__.py  main.py
src/neural_network/: main.cpp
